--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "area-data": "^5.0.6",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "echarts": "^4.2.1",
+    "element-ui": "^2.12.0",
+    "normalize": "^0.3.1",
+    "qs": "^6.8.0",
+    "quill": "^1.3.7",
+    "vue": "^2.6.10",
+    "vue-area-linkage": "^5.1.0",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -18,7 +28,12 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "file-saver": "^2.0.2",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
+    "xlsx": "^0.15.1"
   },
   "eslintConfig": {
     "root": true,
